@startuml Simple_Class_Diagram

skinparam classAttributeIconSize 0
skinparam backgroundColor white
skinparam roundcorner 5
skinparam shadowing false
skinparam defaultFontSize 12
skinparam packageStyle rectangle

package "User Management" {
  class User {
    + id : Integer
    + email : String
    + name : String
    + role : String
    + two_factor_enabled : Boolean
    --
    + generate_2fa_secret()
    + verify_2fa_code()
  }
}

package "Student Management" {
  class Student {
    + student_id : Integer
    + admission_number : String
    + full_name : String
    + gender : String
    + status : String
  }
  
  class Classroom {
    + class_id : Integer
    + name : String
    + academic_year : String
    + form_master_id : Integer
  }
  
  class StudentEnrollment {
    + enrollment_id : Integer
    + student_id : Integer
    + classroom_id : Integer
    + academic_year : String
  }
}

package "Academic Structure" {
  class Subject {
    + subject_id : Integer
    + name : String
    + code : String
  }
  
  class TeachingAssignment {
    + assignment_id : Integer
    + teacher_id : Integer
    + subject_id : Integer
    + classroom_id : Integer
  }
}

package "Attendance Tracking" {
  class AttendanceSession {
    + session_id : Integer
    + classroom_id : Integer
    + subject_id : Integer
    + teacher_id : Integer
    + attendance_date : Date
  }
  
  class AttendanceRecord {
    + record_id : Integer
    + session_id : Integer
    + student_id : Integer
    + status : String
  }
}

package "Risk Assessment" {
  class StudentRiskProfile {
    + student_id : Integer
    + risk_score : Decimal
    + risk_level : String
  }
  
  class SubjectRiskInsight {
    + student_id : Integer
    + subject_id : Integer
    + absence_count : Integer
    + absence_rate : Decimal
  }
}

package "Alert System" {
  class Alert {
    + alert_id : Integer
    + student_id : Integer
    + alert_type : String
    + risk_level : String
    + status : String
    + assigned_to : Integer
  }
}

package "Intervention Management" {
  class InterventionCase {
    + case_id : Integer
    + student_id : Integer
    + alert_id : Integer
    + assigned_to : Integer
    + status : String
    + version : Integer
  }
  
  class InterventionMeeting {
    + student_id : Integer
    + meeting_date : Date
    + root_cause : String
    + action_plan : Text
    + status : String
  }
  
  class ProgressUpdate {
    + meeting_id : Integer
    + update_text : Text
    + created_by : Integer
  }
}

package "Communication" {
  class Message {
    + sender_id : Integer
    + recipient_id : Integer
    + subject : String
    + message : Text
    + is_read : Boolean
  }
}

User --> Classroom : manages
Student --> StudentRiskProfile : has
AttendanceSession --> AttendanceRecord : contains
Alert --> InterventionCase : triggers
InterventionMeeting --> ProgressUpdate : tracks

note right of User
  3 Roles:
  - Administrator
  - Teacher
  - Form Master
end note

note right of StudentRiskProfile
  Risk Levels:
  Low (0-29)
  Medium (30-54)
  High (55-74)
  Critical (75+)
end note

note right of AttendanceRecord
  Status Options:
  present | absent
  late | excused
end note

@enduml
